'Open in colab' button

--- a/notebook/power_transmission.ipynb
+++ b/notebook/power_transmission.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)]()"
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/Dessia-tech/tutorials/blob/notebook/notebook/power_transmission.ipynb)"
       ],
       "metadata": {
         "id": "1vm2LF48hmB_"
@@ -3376,7 +3376,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 837,
+      "execution_count": null,
       "metadata": {
         "id": "0UmJf_cIoN3_"
       },
@@ -3420,7 +3420,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 838,
+      "execution_count": null,
       "metadata": {
         "id": "Vzdf3ulB7igu"
       },
@@ -3451,7 +3451,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 839,
+      "execution_count": null,
       "metadata": {
         "id": "tNEovUpB-HeF"
       },
@@ -3479,7 +3479,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 840,
+      "execution_count": null,
       "metadata": {
         "id": "YwvNl6D--NVs"
       },
@@ -3510,7 +3510,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 841,
+      "execution_count": null,
       "metadata": {
         "id": "d-wlOLIC-S28"
       },
@@ -3537,7 +3537,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 842,
+      "execution_count": null,
       "metadata": {
         "id": "debyL03_-XSt"
       },
@@ -3577,7 +3577,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 843,
+      "execution_count": null,
       "metadata": {
         "id": "OCEhZ9fFwt0c"
       },
@@ -3596,7 +3596,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 844,
+      "execution_count": null,
       "metadata": {
         "id": "WczvHR-ow5vI"
       },
@@ -3615,7 +3615,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 845,
+      "execution_count": null,
       "metadata": {
         "id": "KpZpohMz0ZyF"
       },
@@ -3649,7 +3649,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 846,
+      "execution_count": null,
       "metadata": {
         "id": "OuMKjKnu_y8P"
       },
@@ -3708,7 +3708,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 847,
+      "execution_count": null,
       "metadata": {
         "id": "06yIra1Guszy"
       },
@@ -3722,7 +3722,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 848,
+      "execution_count": null,
       "metadata": {
         "id": "twMHPsxQu4J5"
       },
@@ -3736,7 +3736,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 849,
+      "execution_count": null,
       "metadata": {
         "id": "IWQ7EAMHvH9E"
       },
@@ -3774,7 +3774,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 850,
+      "execution_count": null,
       "metadata": {
         "id": "DHX9E7vgvcag"
       },
@@ -3844,7 +3844,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 851,
+      "execution_count": null,
       "metadata": {
         "id": "NOPhe7Yl1cFH"
       },
@@ -3883,7 +3883,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 852,
+      "execution_count": null,
       "metadata": {
         "id": "iaKnFps42dPl"
       },
@@ -3915,7 +3915,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 853,
+      "execution_count": null,
       "metadata": {
         "id": "Ko5CKU7I2u5D"
       },
@@ -3954,7 +3954,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 854,
+      "execution_count": null,
       "metadata": {
         "id": "Vml84bjx3ABw"
       },
@@ -3990,7 +3990,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 855,
+      "execution_count": null,
       "metadata": {
         "id": "LqZSVfsL3NhY"
       },
@@ -4033,7 +4033,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 856,
+      "execution_count": null,
       "metadata": {
         "id": "ws5eGAZYXUKN"
       },
@@ -4071,7 +4071,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 857,
+      "execution_count": null,
       "metadata": {
         "id": "LFiOm3374SNf",
         "colab": {
@@ -4444,7 +4444,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 858,
+      "execution_count": null,
       "metadata": {
         "id": "Ew1VCx9rMFeE"
       },
@@ -4492,7 +4492,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 859,
+      "execution_count": null,
       "metadata": {
         "id": "6eF5YF9rNGvn"
       },
@@ -4541,7 +4541,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 860,
+      "execution_count": null,
       "metadata": {
         "id": "pvrW_bgFOkB6"
       },
@@ -4577,7 +4577,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 861,
+      "execution_count": null,
       "metadata": {
         "id": "25IT_oCIGeG6",
         "colab": {
@@ -4959,7 +4959,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 862,
+      "execution_count": null,
       "metadata": {
         "id": "MfstfuvKNTnp"
       },
@@ -5039,7 +5039,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 863,
+      "execution_count": null,
       "metadata": {
         "id": "sfrQJuLJaZ08"
       },
@@ -5063,7 +5063,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 864,
+      "execution_count": null,
       "metadata": {
         "id": "jjbGXq8cb1WR"
       },
@@ -5106,7 +5106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 865,
+      "execution_count": null,
       "metadata": {
         "id": "pCwFYwD4b9qU"
       },
@@ -5128,7 +5128,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 866,
+      "execution_count": null,
       "metadata": {
         "id": "g24QLT5acBCM"
       },
@@ -5149,7 +5149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 867,
+      "execution_count": null,
       "metadata": {
         "id": "V1GsxQaKcKPx"
       },
@@ -5192,7 +5192,7 @@
         },
         "outputId": "115ba93a-793d-421d-85ad-580647a5ec62"
       },
-      "execution_count": 868,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5470,7 +5470,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 869,
+      "execution_count": null,
       "metadata": {
         "id": "bC9gowYAfAU3"
       },
@@ -5499,7 +5499,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 870,
+      "execution_count": null,
       "metadata": {
         "id": "-YQm8eeqfGrc",
         "colab": {
@@ -5616,7 +5616,7 @@
       "metadata": {
         "id": "jCmofhjVmBar"
       },
-      "execution_count": 871,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5666,7 +5666,7 @@
       "metadata": {
         "id": "hTbYK2tvnb69"
       },
-      "execution_count": 872,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5716,7 +5716,7 @@
       "metadata": {
         "id": "eHBmfwm_oSfd"
       },
-      "execution_count": 873,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5750,7 +5750,7 @@
       "metadata": {
         "id": "UCWpFijep_9p"
       },
-      "execution_count": 874,
+      "execution_count": null,
       "outputs": []
     },
     {
