notebook: Change collab link for datatools

--- a/notebook/tuto_datatools.ipynb
+++ b/notebook/tuto_datatools.ipynb
@@ -19,6 +19,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/Dessia-tech/tutorials/blob/datatools/notebook/datatools.ipynb)"
+      ],
+      "metadata": {
+        "id": "1vm2LF48hmB_"
+      }
+    },    
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Introduction\n",
         "\n",
         "\n",
