notebook: Some tests for writing in file from colab

--- a/notebook/datatools.ipynb
+++ b/notebook/datatools.ipynb
@@ -12,7 +12,25 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Initialization (only for Colab users)"
+        "# Introduction"
+      ],
+      "metadata": {
+        "id": "E3ERwnGx3rkZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Installation"
+      ],
+      "metadata": {
+        "id": "3ylG0lhx3wRi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Initialization (only for Colab users)"
       ],
       "metadata": {
         "id": "wxfviD0z_WMG"
@@ -3193,7 +3211,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Python imports"
+        "## Python imports"
       ],
       "metadata": {
         "id": "4cVZhP_6_oV-"
@@ -3382,14 +3400,9 @@
       },
       "outputs": [],
       "source": [
-        "import math\n",
-        "import numpy as npy\n",
-        "from scipy.optimize import minimize\n",
-        "from typing import List, Tuple\n",
-        "from IPython.display import HTML\n",
-        "from dessia_common import PhysicalObject, DessiaObject\n",
-        "import volmdlr as vm\n",
-        "import volmdlr.primitives3d as p3d"
+        "from dessia_common.core import DessiaObject, DessiaFilter, FiltersList\n",
+        "from dessia_common.models import all_cars_no_feat, all_cars_wi_feat, rand_data_middl\n",
+        "from dessia_common.datatools import HeterogeneousList, CategorizedList"
       ]
     },
     {
@@ -5774,7 +5787,6 @@
       "collapsed_sections": [
         "wxfviD0z_WMG"
       ],
-      "name": "datatools.ipynb",
       "provenance": [],
       "toc_visible": true
     },
