datatools: Add CategorizedList general text

--- a/notebook/datatools.ipynb
+++ b/notebook/datatools.ipynb
@@ -311,7 +311,7 @@
         "from dessia_common.core import DessiaObject\n",
         "from dessia_common.datatools import HeterogeneousList\n",
         "class MyObject(DessiaObject):\n",
-        "  def __init__(self, attr, name=''):\n",
+        "  def __init__(self, attr: int, name=''):\n",
         "    self.attr = attr\n",
         "\n",
         "my_list = [MyObject(idx) for idx in range(1000)]\n",
@@ -490,15 +490,107 @@
         "    list_string[0] += f', attr = {self.attr}'\n",
         "    return '\\n'.join(list_string)\n",
         "\n",
-        "myhlist = MyHList([MyObject(2.3), MyObject(-2), MyObject(25)], 42, 'name')\n",
-        "myhlist.my_method()\n",
-        "print(myhlist)"
+        "my_hlist = MyHList([MyObject(2.3), MyObject(-2), MyObject(25)], 42, 'name')\n",
+        "my_hlist.my_method()\n",
+        "print(my_hlist)"
       ],
       "metadata": {
         "id": "oGKq5Qc9CqID"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Categorized Lists for clustering**\n",
+        "A Categorized List is a container object for clustered DessiaObjetcs.\n",
+        "\n",
+        "It implements many features that can help engineers to explore clusters in data.\n",
+        "CategorizedList includes, among others, a plot_data method, user friendly clusters manipulation and metrics.\n",
+        "\n",
+        "The current section is a guide for users to prepare data for CategorizedList and easy manipulate them once created."
+      ],
+      "metadata": {
+        "id": "nDfuumrkDhkn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Description\n",
+        "CategorizedList is a class object that inherits from HeterogeneousList. Thus, any method developed for HeterogeneousList will work on CategorizedList, except for `__add__` and `extend` which behavior would not be consistent for clustered data. Indeed, merging two CategorizedList into one with no new computation of labels does not mean anything in terms of data.\n",
+        "\n",
+        "It is designed to labelize data in a HeterogeneousList.\n",
+        "\n",
+        "Thus, it has the same attributes and properties as HeterogeneousList plus an attribute and a property:\n",
+        "*   *labels* (attribute): list of `int`, list of labels matching with *dessia_objects*\n",
+        "*   *n_clusters* (property): `int`, number of clusters in CategorizedList. \n",
+        "\n",
+        "**WARNING: Outliers stored in label `-1` are not considered as a cluster.**"
+      ],
+      "metadata": {
+        "id": "sGA264ZaIjT4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Create a CategorizedList\n",
+        "A CategorizedList must be created with a clustering ClassMethod, in order to fill the *labels* attribute with labels computed with a clustering method."
+      ],
+      "metadata": {
+        "id": "AZrNLTglpvaV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from dessia_common.core import DessiaObject\n",
+        "from dessia_common.datatools import HeterogeneousList, CategorizedList\n",
+        "class MyObject(DessiaObject):\n",
+        "  def __init__(self, attr: int, name=''):\n",
+        "    self.attr = attr\n",
+        "\n",
+        "my_list = [MyObject(idx) for idx in range(1000)]\n",
+        "my_hlist = HeterogeneousList(my_list, 'example')\n",
+        "my_clist = CategorizedList.from_kmeans(my_hlist, n_clusters=10)\n",
+        "print(my_clist)"
+      ],
+      "metadata": {
+        "id": "3NNtukWPqQw7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Work with CategorizedList\n",
+        "CategorizedList are designed to facilitate clustering generation and manipulation, both on platform and in IDEs (local). In that sense, they have methods to facilitate access to data, clusters manipulations and measures."
+      ],
+      "metadata": {
+        "id": "CyMPMJKkxJVr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Clustering methods:**\n",
+        "*   [`from_agglomerative_clustering`](https://lien vers la doc): Compute Agglomerative Clustering.\n",
+        "*   [`from_dbscan`](https://lien vers la doc): Compute DBSCAN clustering.\n",
+        "*   [`from_kmeans`](https://lien vers la doc): Compute KMeans clustering.\n",
+        "*   [`from_pareto_sheets`](https://lien vers la doc): Compute successive pareto sheets and put it in clusters.\n",
+        "\n",
+        "**Implemented methods:**\n",
+        "*   [`clustered_sublists`](https://lien vers la doc): Split a CategorizedList of labelled DessiaObjects into a CategorizedList of labelled HeterogeneousLists.\n",
+        "*   [`cluster_distances`](https://lien vers la doc): Computes all distances between elements of each cluster and their mean\n",
+        "*   [`mean_clusters`](https://lien vers la doc): Compute mathematical means of all clusters\n",
+        "*   [`cluster_real_centroids`](https://lien vers la doc): In each cluster, finds the nearest existing element from the cluster’s mean."
+      ],
+      "metadata": {
+        "id": "cRs4-BwHyRzk"
+      }
     },
     {
       "cell_type": "markdown",
@@ -919,8 +1011,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Store data in a HeterogeneousList\n",
-        "\n"
+        "## Store data in a HeterogeneousList"
       ],
       "metadata": {
         "id": "DRmNSeh_emFD"
@@ -1193,10 +1284,47 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Tutorial 3: Metrics on data**"
+        "### **Tutorial 3: Metrics on data**"
       ],
       "metadata": {
         "id": "fN1lVYs2G0-z"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Store data in a HeterogeneousList"
+      ],
+      "metadata": {
+        "id": "2PUxEDS80p6Z"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pkg_resources\n",
+        "from dessia_common.datatools import HeterogeneousList\n",
+        "from dessia_common.files import StringFile\n",
+        "\n",
+        "# Import data in a list\n",
+        "csv_cars = pkg_resources.resource_stream('dessia_common', 'models/data/cars.csv')\n",
+        "stream = StringFile.from_stream(csv_cars)\n",
+        "list_mycars = Car.from_csv(stream)\n",
+        "\n",
+        "# Create HeterogeneousList of cars\n",
+        "my_hlist = HeterogeneousList(list_mycars)"
+      ],
+      "metadata": {
+        "id": "apMjb7Pc0v7M"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "xigVIxbD00dB"
       }
     },
     {
