fix(datatools): Fix a mistake in code example

--- a/notebook/datatools.ipynb
+++ b/notebook/datatools.ipynb
@@ -468,27 +468,29 @@
     {
       "cell_type": "code",
       "source": [
+        "from typing import List\n",
         "from dessia_common.core import DessiaObject\n",
         "from dessia_common.datatools import HeterogeneousList\n",
         "\n",
         "class MyObject(DessiaObject):\n",
-        "  def __init__(self, attr, name=''):\n",
-        "    self.attr = attr\n",
-        "    DessiaObject.__init__(self, name=name)\n",
+        "    _vector_features = ['attr']\n",
+        "    def __init__(self, attr, name=''):\n",
+        "        self.attr = attr\n",
+        "        DessiaObject.__init__(self, name=name)\n",
         "\n",
         "class MyHList(HeterogeneousList):\n",
-        "  def __init__(self, dessia_objects: List[MyObject], other_attr, name=''):\n",
-        "    HeterogeneousList.__init__(dessia_objects, name)\n",
-        "    self.other_attr = other_attr\n",
+        "    def __init__(self, dessia_objects: List[MyObject], other_attr, name=''):\n",
+        "        HeterogeneousList.__init__(self, dessia_objects, name)\n",
+        "        self.other_attr = other_attr\n",
         "\n",
-        "  def my_method(self):\n",
-        "    print(\"This is a customed method\")\n",
+        "    def my_method(self):\n",
+        "        print(\"This is a customed method\")\n",
         "\n",
-        "  def __str__(self):\n",
-        "    string = HeterogeneousList.__str__()\n",
-        "    list_string = string.split('\\n')\n",
-        "    list_string[0] += f', attr = {self.attr}'\n",
-        "    return '\\n'.join(list_string)\n",
+        "    def __str__(self):\n",
+        "        string = HeterogeneousList.__str__(self)\n",
+        "        list_string = string.split('\\n')\n",
+        "        list_string[0] += f', list attr = {self.other_attr}'\n",
+        "        return '\\n'.join(list_string)\n",
         "\n",
         "my_hlist = MyHList([MyObject(2.3), MyObject(-2), MyObject(25)], 42, 'name')\n",
         "my_hlist.my_method()\n",
